Update gradle and plugin